# ROS2_Laptop_package

./: README.md
install/: local_setup.sh  setup.sh
install/custom_interfaces/include/custom_interfaces/msg/: system_msg.hpp
install/custom_interfaces/include/custom_interfaces/msg/detail/: system_msg__builder.hpp  system_msg__functions.c  system_msg__rosidl_typesupport_fastrtps_c.h  system_msg__rosidl_typesupport_fastrtps_cpp.hpp  system_msg__rosidl_typesupport_introspection_cpp.hpp  system_msg__struct.h  system_msg__struct.hpp  system_msg__traits.hpp  system_msg__type_support.h
install/custom_interfaces/share/ament_index/resource_index/rosidl_interfaces/: custom_interfaces
install/custom_interfaces/share/custom_interfaces/: package.sh
install/custom_interfaces/share/custom_interfaces/msg/: SystemMsg.idl
install/laptop_state/lib/laptop_state/: battery_listener  battery_talker  listener  system_listener  system_talker  talker
install/laptop_state/share/laptop_state/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/custom_interfaces/: CMakeLists.txt
src/laptop_state/: package.xml  setup.cfg  setup.py
src/laptop_state/laptop_state/: battery_publisher.py  battery_subscriber.py  system_publisher.py  system_subscriber.py
